# sandbox-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
benchmark/: Cargo.toml
benchmark/src/: lib.rs  static_vs_dynamic_di.rs
cake-pattern-di/: Cargo.toml
cake-pattern-di/src/: cake_user_repository.rs  cake_user_service.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: user.rs
dynamic-constructor-di/: Cargo.toml
dynamic-constructor-di/src/: dynamic_user_repository.rs  dynamic_user_service.rs  lib.rs
shaku-di/: Cargo.toml
shaku-di/src/: lib.rs  shaku_user_repository.rs  shaku_user_service.rs
static-constructor-di/: Cargo.toml
static-constructor-di/src/: lib.rs  static_user_repository.rs  static_user_service.rs
