[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
dynamic-constructor-di = { path = "../dynamic-constructor-di" }
static-constructor-di = { path = "../static-constructor-di" }
criterion = "0.4.0"

[[bench]]
name = "static_vs_dynamic_di"
path = "../benchmark/src/static_vs_dynamic_di.rs"
harness = false